[package]
name = "tonic-tls-test"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
tonic = { version = "0.14.2" }
tonic-prost = "0.14.2"
prost = "0.14"
rcgen = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter", "fmt"] }
rustls = "*"
hyper = "1.8.1"
hyper-util = { version = "0.1.19", features = ["http2", "client", "client-legacy", "tokio", "tracing"] }
tokio-rustls = "0.26.4"
tower = "0.5.2"
hyper-rustls = { version = "0.27.7", features = ["http2"] }
tracing-log = "0.2.0"
tower-http = { version = "0.6.8", features = ["add-extension", "util"] }
const-oid = { version = "0.10.1", features = ["arbitrary"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
x509-parser = "0.18.0"

[build-dependencies]
tonic-prost-build = "0.14.2"
